# Dev_Training_Assignments

./: .gitignore  CMakeLists.txt  Makefile  main.c
assignment 6/: index.html  question1.txt  some.js
assignment7/: question1.txt  question2.js  question3.js
assignment9/: question1.js  question1file2.js  question2.js  question2.txt  question3.js
cfiles/: linkedlist.c  llfunctions.h  main.c
dynamic_makefile/: Makefile
static_makefile/: Makefile
